import net.fabricmc.loom.LoomGradleExtension

plugins {
    id "fabric-loom" version "1.0-SNAPSHOT"
}

sourceCompatibility = 17
targetCompatibility = 17

def minecraftVersion = "1.18.2"
def asmVersion = "9.3"
def mixinVersion = "0.8.5"
def mainClass = "com.eteryun.launch.Main"

version "1.0.0"
group "com.eteryun"

repositories {
    maven {
        url "https://repo.spongepowered.org/repository/maven-public/"
    }
    maven {
        url "https://jitpack.io/"
    }
    mavenCentral()
}

for (def runConfig : LoomGradleExtension.get(project).getRunConfigs()) {
    runConfig.defaultMainClass mainClass
}

dependencies {
    minecraft "com.mojang:minecraft:$minecraftVersion"
    mappings loom.officialMojangMappings()
    implementation "org.spongepowered:mixin:$mixinVersion"

    implementation "com.github.TheKodeToad.fabric-loom:fabric-loom:namedofficial-SNAPSHOT"

    implementation 'me.friwi:jcefmaven:105.3.36'

    implementation "cpw.mods:modlauncher:8.1.3"

    implementation "cpw.mods:modlauncher:8.1.3:api"

    implementation "cpw.mods:grossjava9hacks:1.3.3"

    implementation "org.ow2.asm:asm:$asmVersion"
    implementation "org.ow2.asm:asm-analysis:$asmVersion"
    implementation "org.ow2.asm:asm-commons:$asmVersion"
    implementation "org.ow2.asm:asm-tree:$asmVersion"
    implementation "org.ow2.asm:asm-util:$asmVersion"

    annotationProcessor "org.ow2.asm:asm:$asmVersion"
    annotationProcessor "org.ow2.asm:asm-analysis:$asmVersion"
    annotationProcessor "org.ow2.asm:asm-commons:$asmVersion"
    annotationProcessor "org.ow2.asm:asm-tree:$asmVersion"
    annotationProcessor "org.ow2.asm:asm-util:$asmVersion"
}

loom {
    runs {
        client {
            vmArgs "--add-opens=java.base/sun.security.util=ALL-UNNAMED", "--add-opens=java.base/java.util.jar=ALL-UNNAMED"
        }
    }

    mixin {
        useLegacyMixinAp = true
        refmapTargetNamespace = "official"
        defaultRefmapName = "eteryun-refmap.json"
    }
}

remapJar {
    targetNamespace = "official"
}

jar {
    manifest {
        attributes(
                "Premain-Class": "com.eteryun.launch.agent.Agent",
                "Agent-Class": "com.eteryun.launch.agent.Agent",
                "Launcher-Agent-Class": "com.eteryun.launch.agent.Agent",
                "Main-Class": mainClass,
        )
    }
}

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
    it.options.encoding = 'UTF-8'
}